<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signUp_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:scaleType="fitStart"
            android:src="@drawable/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/sign_up_ibook"
            app:layout_constraintEnd_toEndOf="@+id/signUp_Image"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="@+id/signUp_Image"
            app:layout_constraintTop_toTopOf="@+id/signUp_Image"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/info_area"
            android:layout_width="346dp"
            android:layout_height="572dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/sign_up"
                android:textColor="#3A3A3A"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/there_s_lots_in_store_for_you"
                android:textColor="#3A3A3A"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/first_name"
                android:textColor="#3A3A3A"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#CECECE"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_first_name"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/last_name"
                android:textColor="#3A3A3A"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#CECECE"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_last_name"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/username"
                android:textColor="#3A3A3A"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#CECECE"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_username"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/email_address"
                android:textColor="#3A3A3A"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#CECECE"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_email_address"
                    android:inputType="textWebEmailAddress"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/password"
                android:textColor="#3A3A3A"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_password_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#CECECE"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp_button"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signIn_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_area"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/have_an_account"
                android:textColor="#959595"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_in"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:textColor="#3A3A3A"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>