<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/signIn_Image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/sign_in_ibook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/signIn_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/signIn_Image2"
            android:layout_width="297dp"
            android:layout_height="291dp"
            android:layout_marginTop="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signIn_Image1"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/signIn_Image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:importantForAccessibility="no"
            android:src="@drawable/sign_in_ibook2"
            app:layout_constraintBottom_toBottomOf="@+id/signIn_Image2"
            app:layout_constraintEnd_toEndOf="@+id/signIn_Image2"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="@+id/signIn_Image2"
            app:layout_constraintTop_toTopOf="@+id/signIn_Image2"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signIn_TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/signIn_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/signIn_button"
            app:layout_constraintTop_toBottomOf="@+id/signIn_Image2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signIn_TextView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/we_re_glad_to_have_you_back"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/signIn_button"
            app:layout_constraintStart_toStartOf="@id/signIn_button"
            app:layout_constraintTop_toBottomOf="@+id/signIn_TextView1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signIn_TextView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/signIn_button"
            app:layout_constraintStart_toStartOf="@id/signIn_button"
            app:layout_constraintTop_toBottomOf="@+id/signIn_TextView2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="#CECECE"
            app:layout_constraintTop_toBottomOf="@+id/signIn_TextView3"
            app:layout_constraintStart_toStartOf="@id/signIn_button"
            app:layout_constraintEnd_toEndOf="@id/signIn_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:maxLength="30"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="0dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signIn_TextView4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/signIn_button"
            app:layout_constraintStart_toStartOf="@id/signIn_button"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="#CECECE"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/signIn_TextView4"
            app:layout_constraintStart_toStartOf="@id/signIn_button"
            app:layout_constraintEnd_toEndOf="@id/signIn_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="25"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/sf_pro_rounded_heavy"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <LinearLayout
            android:id="@+id/signup_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signIn_button">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signIn_TextView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/new_to_ibook"
                android:textColor="#959595"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signIn_TextView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/set_up_an_account"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>